--- a/gene-josh/css-styles/module.css
+++ b/gene-josh/css-styles/module.css
@@ -2,10 +2,15 @@ img {
     max-width: 100%;
 }
 
+li {
+    list-style-type: none;
+}
+
 @media only screen and (min-width:640px) {
     
     .icon-menu {
         display: none;
+        font-size: 200%;
     }
 
     nav {
